2008-06-27  Arnim Laeuger  <arniml@users.sourceforge.net>

   * UrJTAG.txt: JTAGkey-Tiny

   * UrJTAG.txt: update of bus driver init() function
   * include/bus_driver.h, src/cmd/initbus.c, src/bus/bf548_ezkit.c,
     src/bus/fjmem.c, src/bus/ppc405ep.c, src/bus/sh7727.c,
     src/bus/prototype.c, src/bus/sa1110.c, src/bus/ppc440gx_ebc8.c,
     src/bus/tx4925.c, src/bus/sh7750r.c, src/bus/pxa2x0.c,
     src/bus/bf533_stamp.c, src/bus/bf533_ezkit.c, src/bus/bf537_stamp.c,
     src/bus/ixp425.c, src/bus/avr32.c, src/bus/h7202.c,
     src/bus/zefant-xs3.c, src/bus/mpc824x.c, src/bus/bcm1250.c,
     src/bus/sharc21065l.c, src/bus/au1500.c, src/bus/lh7a400.c,
     src/bus/sh7751r.c, src/bus/generic_bus.c, src/bus/mpc5200.c,
     src/bus/jopcyc.c, src/bus/bf561_ezkit.c, src/bus/slsup3.c,
     src/bus/s3c4510x.c, src/bus/ejtag.c, src/bus/generic_bus.h:
     [ 1984813 ] Bus driver cleanup, separate (*init) and (*prepare)
     functions (Hartley Sweeten)

2008-06-24  Jie Zhang  <jie.zhang@analog.com>

   From Michael Hennerich <michael.hennerich@analog.com>
   * src/tap/cable.c (ft2232_bfin_ujtag_cable_driver): Rename to ...
     (ft2232_gnice_cable_driver): ... this.
     (cable_drivers[]): Change accordingly.
   * src/tap/cable/generic_usbconn.c
     (usbconn_cable_bfin_ujtag_ftd2xx): Rename to ...
     (usbconn_cable_gnice_ftd2xx): ... this.
     (usbconn_cable_bfin_ujtag_ftdi): Rename to ...
     (usbconn_cable_gnice_ftdi): ... this.
   * src/tap/cable/ft2232.c (BIT_BFIN_UJTAG_nTRST): Rename to ...
     (BIT_GNICE_nTRST): ... this.
     (BIT_BFIN_UJTAG_nLED): Rename to ...
     (BIT_GNICE_nLED): ... this.
     (BITMASK_BFIN_UJTAG_nTRST): Rename to ...
     (BITMASK_GNICE_nTRST): ... this.
     (BITMASK_BFIN_nLED): Rename to ...
     (BITMASK_GNICE_nLED): ... this.
     (ft2232_bfin_urjtag_init): Rename to ...
     (ft2232_gnice_init): ... this.
     (ft2232_bfin_urjtag_done): Rename to ...
     (ft2232_gnice_done): ... this.