@@ -1,0 +1,22 @@
+# 
+# $Id: PARTS 599 2004-06-13 18:16:43Z telka $ 
+# 
+# Copyright (C) 2008 andi2k (sf.net)
+# 
+# This program is free software; you can redistribute it and/or 
+# modify it under the terms of the GNU General Public License 
+# as published by the Free Software Foundation; either version 2 
+# of the License, or (at your option) any later version. 
+# 
+# This program is distributed in the hope that it will be useful, 
+# but WITHOUT ANY WARRANTY; without even the implied warranty of 
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+# GNU General Public License for more details. 
+# 
+# You should have received a copy of the GNU General Public License 
+# along with this program; if not, write to the Free Software 
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 
+# 02111-1307, USA. 
+# 
+# bits 27-12 of the Device Identification Register 
+1000011000110000 smp8634 SMP8634 
